*  http://www.h-hennes.fr/blog/
*/
2021-xx-xx  - V 2.0.0 : #117 Change commands domain
                        #203 Remove Install commands
                        #217 admin:user:create validate customer data
                        #218 New Command admin:profiles:list
                        #227 New Command analyze:carriers
                        #228 New Command analyze:payments
                        Update min php version to php7.2 +
                        Update compatibility only for ps 1.7 +
                        Add tests for commands
                        Remove commands:
                         - IdeClassNamesCommand
                         - InfoCommand
                         - InstallCommand

2020-12-29  - V 1.6.2 : #142 Error when try to start by prestashopConsole command
                        #170 Create Webservice key command
                        #173 Change link in readme
                        Disable the install command which will be refactored in next version
                        Branch 1.6 is the last branch which deals with Prestashop 1.6 and Php < 7.2

2020-06-25  - V 1.6.1 : #106 Error in generate Images commands
                        #107 Improve module:hook:list command
                        #108 Update licence header for generated code
                        #116 db:export allow to define file name
2020-04-07  - V 1.6.0 : Improve code quality
                        New commands to generate htaccess and robots.txt files
                        New commands to list hooks (global or with modules)
                        New command to generate images thumbnails
                        New command to generate console command
                        New command to export images
                        Allow to rename phar file
2019-12-01   - V 1.5.0 : New commands for db interactions
                       New command to list admin users